# dotfiles

./: .Xresources  .gdbinit  .gitignore  .gtkrc-2.0  .p10k.zsh  .vimrc  .xinitrc  .zprofile  .zsh_plugins.txt  .zshrc  README.md  amdgpu_power_profile.service  bootstrap.sh  dash-to-panel_v62.conf  install.py  pyproject.toml  ruff.toml  setup.py  setup.sh
.config/: dolphinrc  kde-mimeapps.list  kdeglobals  kglobalshortcutsrc  klipperrc  kwinrc  mimeapps.list
.config/alacritty/: alacritty.toml  moonfly.toml  one_dark.toml
.config/dunst/: dunstrc
.config/fish/: config.fish
.config/fnott/: fnott.ini
.config/fontconfig/: fonts.conf
.config/foot/: foot.ini
.config/frogminer/: linux-tkg.cfg
.config/ghostty/: config
.config/gsimplecal/: config
.config/gtk-3.0/: bookmarks
.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
.config/i3/: config
.config/i3status/: config
.config/kitty/: kitty.conf
.config/lf/: lfrc  mkfile  pv.sh  pv_sandbox.sh
.config/opencode/: opencode.json
.config/picom/: picom.conf
.config/rofi/: config.rasi
.config/strawberry/: strawberry.conf
.config/tmux/: tmux.conf
.config/uwsm/: .gitignore  env
.config/vlc/: vlc-qt-interface.conf  vlcrc
.config/waybar/: config.jsonc  style.css
.xinit-scripts/: input-devices.sh  screen-layout.sh
.zsh_functions/: prompt_warg_setup
c/: .clang-format  .clang-tidy  .clangd
keychron/: via_udev_rule.sh
python/: pyproject.toml
sysctl.d/: 99-network.conf
windows-terminal/: settings.json
xremap/: README.md  osrs.yml
zsh/: completion  dircolors  plugins  prompt  rc
(+24 files in other folders)
